# OepenTrench

./: .gitignore  CLAUDE.md  Evaluation.md  README.md  alembic.ini  pyproject.toml
.cursor/rules/: src-api.mdc
alembic/: env.py
alembic/versions/: 001_bootstrap_schema.py  002_photo_analysis_and_project_date.py  003_geojson_status.py  004_photo_analysis_gps_coordinates.py  005_drop_item_table.py  006_drop_sand_bedding_pipe_end_seal.py  007_photo_analysis_reviewer_fields.py  008_project_asset_hash_sha256.py  009_online_learning_training_run.py  010_fcp_coverage.py  011_photo_analysis_reviewer_is_duplicated.py
artifacts/trench_classifier/: eval.json  head.joblib  meta.json
artifacts/trench_classifier_base/: eval.json  head.joblib  meta.json
artifacts/trench_classifier_tuned/: eval.json  head.joblib  meta.json
configs/labelling/: grounding-dino.yaml  owlv2.yaml  sam3.yaml
data/: oepentrench_api.db
data/cache/: phashes.parquet  photo_index.parquet
docs/: benchmark_data.csv  benchmark_results.md  eval_results.md  labelling-harness.md  photo-documentation-category.md  problem_reasoning.md
docs/superpowers/decisions/: 2026-05-15-labelling-harness-v3.md
docs/superpowers/specs/: 2026-05-15-labelling-harness-v3-design.md
docs/ui-specs/: 01-Project-view.md  02-File Upload.md  02.3-Project-Images-Panel.md  03-Maps view.md  03.1-fcp-view.md  03.1-trenchimageview.md  03.2-individual_images.md  03.2-trenchimage-view.md  1.1-Add Project File.md
frontend/: index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  exampleGeojsonModuleUrls.ts  index.css  main.tsx  normalizeExampleGeojson.ts
frontend/src/api/: client.ts
frontend/src/components/: CreateProjectCard.tsx  MapView.tsx  ProjectCard.tsx
frontend/src/helpers/: projectFormatters.ts
frontend/src/pages/: DashboardPage.tsx  GeoJsonDemoPage.tsx  MapPage.tsx  OnlineLearningPage.tsx  ProjectDetailPage.tsx
frontend/src/styles/: report-print.css
notebooks/: 01_dataset_overview.ipynb  04_model_evaluation.ipynb
openapi/: openapi.json
scripts/: README.md  aggregate_trench_classifications.py  annotate_exemplars.py  build_notebooks.py  compare_runs.py  eval_presence.py  evaluate_trench_classifier.py  export_openapi.py  extend_manifest.py  inspect_labels.py  label.py  manual_label.py  prepare_trench_classification_dataset.py  refine_with_sam2.py  sam_label.py  seed_dummy_project.py  seed_fixtures.py  seed_persist.py  split_classification_dataset.py  train_trench_classifier.py  train_yolo.py
src/: cache.py  geo.py  photos.py
src/api/: .cursorrules  __init__.py  database.py  ids.py  main.py  models.py  uploads.py
src/api/helpers/: __init__.py  face_detection.py  geojson_sampling.py  pagination.py  photo_documentation_category.py  time.py
src/api/models/: __init__.py  common.py  fcp_coverage.py  map.py  online_learning.py  photo_analysis.py  project.py
src/api/routes/: __init__.py  items.py  online_learning.py  projects.py
src/api/services/: compartment_service.py  extract_img_metadata_service.py  item_service.py  map_photos_service.py  mistral_ocr_dump.json  online_learning_export_service.py  online_learning_service.py  online_learning_training_service.py  photo_analysis_service.py  project_asset_service.py  (+4 more)
src/classifier/: __init__.py  trench_classifier.py
src/labelling/: __init__.py  base.py  compare.py  config.py  hybrid_labeller.py  remote_labeller.py  runner.py
tests/labelling/: test_bbox.py  test_compare.py  test_compare_class_names.py  test_config.py  test_inspect_meta.py  test_remote_integration.py  test_resume.py
vm-server/: Makefile  README.md  pyproject.toml
vm-server/server/: main.py  schema.py
vm-server/server/adapters/: __init__.py  base.py  florence2.py  grounding_dino.py  owlv2.py  qwen_vl.py  trex2.py
vm-server/tests/: test_health.sh
(+89 files in other folders)
