[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oepentrench"
version = "0.1.0"
description = "AI-powered QC for fiber trench construction documentation (APG Hackathon 2026)"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { text = "TBD" }
authors = [{ name = "OepenTrench team" }]

dependencies = [
    # image + EXIF
    "pillow>=11.0,<12",
    "exifread>=3.0,<4",
    "piexif>=1.1,<2",
    "imagehash>=4.3,<5",
    # numerics / dataframes
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "pyarrow>=15,<22",
    # geo
    "shapely>=2.0,<3",
    "geopandas>=1.0,<2",
    "pyproj>=3.6,<4",
    "folium>=0.17,<1",
    # plotting
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    # progress
    "tqdm>=4.66,<5",
    # api
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlmodel>=0.0.22,<0.1",
    "alembic>=1.14,<2",
    "nanoid>=2.0,<3",
    "python-multipart>=0.0.18,<1",
    "easyocr>=1.7.2",
    # YAML parsing (data.yaml, labeller configs)
    "pyyaml>=6.0,<7",
    # labelling harness — HTTP client + config validation
    "httpx>=0.27,<1",
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab>=4.2,<5",
    "ipykernel>=6.29,<7",
    "ipywidgets>=8.1,<9",
    "nbformat>=5.10,<6",
    "nbconvert>=7.16,<8",
]
inspect = [
    # visual bbox inspection / dataset browsing
    "fiftyone>=1.0,<2",
]
dev = [
    "ruff>=0.5,<1",
    "pytest>=8,<9",
    # mock httpx for RemoteVlmLabeller integration tests
    "respx>=0.21,<1",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py39"
